Mon Nov 22 11:58:11 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_concat): set ENC_CODERANGE_VALID when the
	  receiver is 7BIT and the argument is non ASCII.

Mon Nov 22 01:48:58 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: some improvements for performance.

Sat Nov 20 07:45:50 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/mkmf.rb: adding compilation support for ObjC/ObjC++ extensions.
	  Thanks Scott Gonyea! [ruby-core:33260]

Sat Nov 20 01:57:55 2010  Akio Tajima  <artonx@yahoo.co.jp>

	* common.mk: add dependency(insns.inc) to compile.obj

Fri Nov 19 23:05:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (insns_rules.mk): remove extra backslash.

	* cygwin/GNUmakefile.in, win32/Makefile.sub (clean): rc files are
	  made at compile time, so should be removed by clean.

Fri Nov 19 22:09:46 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_core.rb
	  (Tester#test_pretty_format_long_text_finite): skip a test that
	  uses long string on small memory system. [ruby-dev:42599]

Fri Nov 19 21:07:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb: shell completion support for zsh.  based on
	  <http://d.hatena.ne.jp/rubikitch/20071002/zshcomplete>

	* lib/optparse.rb: shell completion support for bash.

Fri Nov 19 00:00:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (SCRIPTPROGRAMS): no needs on cygwin.

	* win32/Makefile.sub (scriptbin): create script binaries.

Thu Nov 18 23:21:23 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/formatters/pretty.rb (REXML::Formatters::Pretty#wrap):
	  REXML::Formatters::Pretty#wrap used a recursive method call to
	  format text.  This switches it to use an iterative approach.
	  [ruby-core:33245]
	  Patch by Jeremy Evans. Thanks!!!

	* test/rexml/test_core.rb: add a test for it.

Thu Nov 18 22:58:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/io.h (rb_io_buffer_t): extract from rb_io_t.
